--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 #root {
+  position: relative;
   max-width: 1280px;
+  min-width: 320px;
   margin: 0 auto;
   text-align: center;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
