--- a/src/components/playingField/playingField.module.scss
+++ b/src/components/playingField/playingField.module.scss
@@ -42,6 +42,62 @@
   }
 }
 
+.button_conteiner {
+  display: flex;
+  flex-direction: row;
+
+  &.none {
+    display: none;
+  }
+
+  @media (max-width: 769px)  {
+    flex-direction: column;
+  }
+}
+
+.button {
+  height: 2rem;
+  padding: 0 2rem;
+  margin: 1rem;
+  border-radius: 0.5rem;
+  background-color: #191c21;
+  border: 2px solid #191c21;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: 0.3s;
+  -webkit-tap-highlight-color: transparent;
+
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      border: 2px solid #58c4dc;
+    }
+  }
+
+  &:active {
+    border: 2px solid #58c4dc;
+    transition: 0.05s;
+  }
+
+  &:focus {
+    -webkit-tap-highlight-color: transparent;
+  }
+
+  &.disabled {
+    cursor: auto;
+
+    @media (hover: hover) and (pointer: fine) {
+      &:hover {
+        border: 2px solid #191c21;
+      }
+    }
+
+    &:active {
+      border: 2px solid #191c21;
+      transition: 0.05s;
+    }
+  }
+}
+
 @keyframes swaying {
   from {
     transform: rotate(0deg);
