--- a/src/components/table/table.module.scss
+++ b/src/components/table/table.module.scss
@@ -17,6 +17,12 @@
     border: 2px solid rgba(51,58,69, 0.3);
     color: gray;
   }
+
+  @media (min-width: 769px)  {
+    width: 3rem;
+    height: 3rem;
+    font-size: 1.5rem;
+  }
 }
 
 .th_one {
@@ -26,6 +32,12 @@
   border: 2px solid #191c21;
   border-radius: 0.5rem;
   user-select: none;
+
+  @media (min-width: 769px)  {
+    width: 3rem;
+    height: 3rem;
+    font-size: 1.5rem;
+  }
 
   &.active {
     border: 2px solid #58c4dc;
